<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/nameInputText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/takePictureButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:defaultFocusHighlightEnabled="true"
        android:onClick="takePictureOfPerson"
        android:text="@string/take_picture_button_text"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:onClick="savePerson"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePictureButton" />

    <EditText
        android:id="@+id/nameInputText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:focusedByDefault="false"
        android:inputType="textPersonName|textCapWords"
        android:selectAllOnFocus="true"
        android:text="@string/add_person_name_default_text"
        app:layout_constraintBottom_toTopOf="@+id/takePictureButton"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/addPersonErrorTextView"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/takePictureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputText" />
</android.support.constraint.ConstraintLayout>