...
        android:layout_marginStart="129dp"
        android:layout_marginTop="12dp"
        android:onClick="loadImageGalleryMode"
        android:text="@string/image_list_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOfNamesButton3" />

    <Button
        android:id="@+id/listOfNamesButton3"
        android:layout_width="314dp"
        android:layout_height="50dp"
        android:layout_marginBottom="165dp"
...
